--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.7",
+    "querystring": "^0.2.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
